2007-05-30  Frederic Ruaudel <grumz@grumz.net>
	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Replace the "duplicate" profile button by
	a "copy" and a "paste" button, so it is now possible to copy a 
	profile from one action to another.

	* nact/nact-editor.c: Update the "save action" code

2007-05-25  Frederic Ruaudel <grumz@grumz.net>
	* nact/nautilus-actions-config.glade:
	* nact/nact-profile-editor.c: Fix the problem which make the legend 
	dialog modal (Bug #337542) by changing the Legend button into a 
	toggle button. The Legend dialog can't be closed directly.

	* nact/nact-editor.c: Implement renaming of a profile

	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h: Add func
	to rename a profile.

	* nact/nact-editor.c: implement deletion of a profile

	* libnautilus-actions/nautilus-actions-config-gconf.c:
	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h:
	* nact/nact-editor.c: Change the definition of the function 
	nautilus_actions_config_action_add_profile () to manage error
	when the profile name already exists.

	* nact/nact-profile-editor.c: Implement duplication of a profile

2007-05-24  Frederic Ruaudel <grumz@grumz.net>
	* nact/nautilus-actions-config.glade: Update the callbacks of all
	the profile editor dialog field.

	* nact/nact-profile-editor.c:
	* nact/nact-profile-editor.h:
	* nact/nact-editor.c:
	* nact/nact-utils.c:
	* nact/nact-utils.h: Implement addition and edition of the profile
	in Nact.

	* libnautilus-actions/nautilus-actions-config.h:
	* libnautilus-actions/nautilus-actions-config.c: Add functions to
	manage profiles more easily.

2007-05-23  Frederic Ruaudel <grumz@grumz.net>
	* nact/nact-editor.c: Move profile edition code to the new files
	nact/nact-profile-editor.[ch].

	* nact/nact-profile-editor.c:
	* nact/nact-profile-editor.h: Create these new files to manage
	profile edition code.
